--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,8 @@
 doctype html
+// using #{variable} allows you to pass variable
 html
   head
-    title= title
+    title Whassup
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
