added new stylesheet options

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ doctype html
 html
   head
     title Whassup
-    link(rel='stylesheet', href='/stylesheets/darkly.css')
+    link(rel='stylesheet', href='/stylesheets/literia.css')
     script(src="https://kit.fontawesome.com/ef21edb9eb.js", crossorigin="anonymous")
   body
     .container
