Changed authentication requirements/routes

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,3 +9,4 @@ block content
         p Create an account or login
         a.btn.btn-primary.btn-block.mb-2(href='/users/register') Register
         a.btn.btn-secondary.btn-block(href='/users/login') Login
+        a.btn.btn-secondary.btn-block(href='/dashboard') Continue to Dashboard
