--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -2,5 +2,5 @@ extends layout
 
 block content
     h1.mt-4 Dashboard
-    p.lead.mb-3 Welcome #{user.name}
+    include ./partials/welcome
     a.btn.btn-secondary(href='/users/logout') Logout
