--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 // using #{variable} allows you to pass variable
 html
   head
-    title Whassup
+    title Inhalert
     link(rel='stylesheet', href='/stylesheets/literia.css')
     script(src="https://kit.fontawesome.com/ef21edb9eb.js", crossorigin="anonymous")
   body
