Changed Index icon

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,8 +5,9 @@ block content
     .col-md-6.m-auto
       .card.card-body.text-center
         h1
-          i.fab.fa-node-js.fa-3x
+          i.far.fa-bell.fa-3x
+          i.fas.fa-wind.fa-3x
         p Create an account or login
         a.btn.btn-primary.btn-block.mb-2(href='/users/register') Register
         a.btn.btn-secondary.btn-block(href='/users/login') Login
-        a.btn.btn-secondary.btn-block(href='/dashboard') Continue to Dashboard
+        a.btn.btn-dark.btn-block(href='/dashboard') Continue to Dashboard
