--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,6 +1,11 @@
 extends layout
 
 block content
-    h1.mt-4 Dashboard
-    include ./partials/welcome
-    a.btn.btn-secondary(href='/users/logout') Logout
+    .row.mt-5
+        .col-md-6.m-auto
+            .card.card-body
+                h1.mt-4 Dashboard
+                include ./partials/messages
+                include ./partials/welcome
+
+
