--- a/views/partials/welcome.pug
+++ b/views/partials/welcome.pug
@@ -1,2 +1,8 @@
 if user
     p.lead.mb-3 Welcome #{user.name}
+    a.btn.btn-primary.btn-block.mb-2(href='/dashboard/send') Send Email
+    a.btn.btn-secondary.btn-block.mb-2(href='/users/logout') Logout
+else
+    p.lead.mt-4
+    a.btn.btn-primary.btn-block.mb-2(href='/users/login') Login
+    a.btn.btn-secondary.btn-block.mb-2(href='/users/register') Register
