--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -7,5 +7,36 @@ block content
                 h1.mt-4 Dashboard
                 include ./partials/messages
                 include ./partials/welcome
+    script(type='text/javascript').
+        $(document).ready(function () {
+            var params = {
+                // Request parameters
+                "environmentalSegment": "air"
+            };
+            $.ajax({
+                url: "https://cors-anywhere.herokuapp.com/https://gateway.api.epa.vic.gov.au/environmentMonitoring/v1/forecasts?" + $.param(params),
+                beforeSend: function (xhrObj) {
+                    // Request headers
+                    xhrObj.setRequestHeader("X-API-Key", "050c16c08ef84cadb8f92d5d73074b95");
+                },
+                type: "GET",
+                // Request body
+                data: "",
+            })
+                .done(function (data) {
+                    alert("success");
+                    console.log(data)
+                    for (r in data.records) {
+                        console.log(r)
+                        document.getElementById("hi").innerHTML+="<li>" + data.records[r].regionName + ": " + data.records[r].title + "</li>";
+                    }
+                })
+                .fail(function () {
+                    console.log()
+                    alert("error");
+                });
+        });
+
+    ul#hi Fetching Air Quality Summary
 
 
