--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -24,8 +24,8 @@ block content
                 data: "",
             })
                 .done(function (data) {
-                    alert("success");
                     console.log(data)
+                    document.getElementById("hi").textContent="Summary"
                     for (r in data.records) {
                         console.log(r)
                         document.getElementById("hi").innerHTML+="<li>" + data.records[r].regionName + ": " + data.records[r].title + "</li>";
