seperated embedded js into statics file

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
     title Inhalert
     link(rel='stylesheet', href='/stylesheets/literia.css')
     script(src="https://kit.fontawesome.com/ef21edb9eb.js", crossorigin="anonymous")
+    block extraHeader
   body
     .container
       - body
