--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,4 +1,6 @@
 extends layout
+block extraHeader
+    script(type='text/javascript' src="/static/forecast_query.js")
 
 block content
     .row.mt-5
@@ -7,35 +9,9 @@ block content
                 h1.mt-4 Dashboard
                 include ./partials/messages
                 include ./partials/welcome
-    script(type='text/javascript').
-        $(document).ready(function () {
-            var params = {
-                // Request parameters
-                "environmentalSegment": "air"
-            };
-            $.ajax({
-                url: "https://cors-anywhere.herokuapp.com/https://gateway.api.epa.vic.gov.au/environmentMonitoring/v1/forecasts?" + $.param(params),
-                beforeSend: function (xhrObj) {
-                    // Request headers
-                    xhrObj.setRequestHeader("X-API-Key", "050c16c08ef84cadb8f92d5d73074b95");
-                },
-                type: "GET",
-                // Request body
-                data: "",
-            })
-                .done(function (data) {
-                    console.log(data)
-                    document.getElementById("hi").textContent="Summary"
-                    for (r in data.records) {
-                        console.log(r)
-                        document.getElementById("hi").innerHTML+="<li>" + data.records[r].regionName + ": " + data.records[r].title + "</li>";
-                    }
-                })
-                .fail(function () {
-                    console.log()
-                    alert("error");
-                });
-        });
+    script(type = 'text/javascript').
+        $(document).ready(getForecastSummary());
+
 
     ul#hi Fetching Air Quality Summary
 
