--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -6,7 +6,7 @@ block content
     .row.mt-5
         .col-md-6.m-auto
             .card.card-body
-                h1.mt-4 Dashboard
+                h1.mt-4 Inhalert
                 include ./partials/messages
                 include ./partials/welcome
     script(type = 'text/javascript').
