--- a/views/preferences.pug
+++ b/views/preferences.pug
@@ -7,11 +7,11 @@ block content
     .row.mt-5
         .col-md-6.m-auto
             .card.card-body
-                h1.text-center.mb-3 Choose Site to be Notified for
+                h1.text-center.mb-2 Choose Site to be Notified for
                 include ./partials/messages
                 form(action='/users/preferences', method='POST')
-                    select.form-select#sel(name="siteSelection" onchange="show(this)") Select Site
-                        option(value="") >-- Select --<
+                    select.form-group#sel(name="siteSelection" onchange="show(this)") Select Site
+                        option.form-control(value="") >-- Select --<
                     button.btn.btn-primary.btn-block(type='submit')
                         | Submit
 
