seperated loop into controllers and routes

--- a/views/partials/welcome.pug
+++ b/views/partials/welcome.pug
@@ -1,6 +1,6 @@
 if user
     p.lead.mb-3 Welcome #{user.name}
-    a.btn.btn-primary.btn-block.mb-2(href='/dashboard/send') Send Email
+    a.btn.btn-primary.btn-block.mb-2(href='/emails/send') Send Email
     a.btn.btn-primary.btn-block.mb-2(href='/users/preferences') Change Alert Preferences
     a.btn.btn-secondary.btn-block.mb-2(href='/users/logout') Logout
 else
