--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
 doctype html
 html(lang='en')
   head
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
+    script(type='text/javascript' src="/static/new_forecast.js")
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description', content='')
@@ -47,85 +49,79 @@ html(lang='en')
                 .col-12.col-md-9.mb-2.mb-md-0
                   input.form-control.form-control-lg(type='text', placeholder='Enter your postcode...')
                 .col-12.col-md-3
-                  button.btn.btn-block.btn-lg.btn-primary(type='submit') Show me!
+                  button.btn.btn-block.btn-lg.btn-secondary(type='submit') Show me!
     // Icons Grid
     section.features-icons.bg-light.text-center
+      script(type = 'text/javascript').
+        $(document).ready(getForecastSummary());
       .container
-        .row
-          .col-lg-4
-            .features-icons-item.mx-auto.mb-5.mb-lg-0.mb-lg-3
-              .features-icons-icon.d-flex
-                i.icon-screen-desktop.m-auto.text-primary
-              h3 This should show summary
-              p.lead.mb-0 Table with live status
-          .col-lg-4
-            .features-icons-item.mx-auto.mb-5.mb-lg-0.mb-lg-3
-              .features-icons-icon.d-flex
-                i.icon-layers.m-auto.text-primary
-              h3 Bootstrap 4 Ready
-              p.lead.mb-0 Featuring the latest build of the new Bootstrap 4 framework!
-          .col-lg-4
-            .features-icons-item.mx-auto.mb-0.mb-lg-3
-              .features-icons-icon.d-flex
-                i.icon-check.m-auto.text-primary
-              h3 Easy to Use
-              p.lead.mb-0 Ready to use with your own content, or customize the source files!
+        h3 Live Air Quality Report for Victoria
+        br
+        table.table.table-bordered#summaryTable
+          thead.table-info
+            tr
+              th(scope='col') Region
+              th(scope='col') Air Quality Status
+          tbody
+        button.btn.btn-light(onclick='getForecastSummary()') Refresh
+          br
     // Image Showcases
     section.showcase
       .container-fluid.p-0
         .row.no-gutters
-          .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/bg-showcase-1.jpg');")
+          .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/clouds.jpg');")
           .col-lg-6.order-lg-1.my-auto.showcase-text
-            h2 Fully Responsive Design
+            h2 Register to receive alerts
             p.lead.mb-0
-              | When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!
-        .row.no-gutters
-          .col-lg-6.text-white.showcase-img(style="background-image: url('/img/bg-showcase-2.jpg');")
-          .col-lg-6.my-auto.showcase-text
-            h2 Updated For Bootstrap 4
-            p.lead.mb-0
-              | Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!
-        .row.no-gutters
-          .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/bg-showcase-3.jpg');")
-          .col-lg-6.order-lg-1.my-auto.showcase-text
-            h2 Easy to Use & Customize
-            p.lead.mb-0
-              | Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!
-    // Testimonials
-    section.testimonials.text-center.bg-light
-      .container
-        h2.mb-5 What people are saying...
-        .row
-          .col-lg-4
-            .testimonial-item.mx-auto.mb-5.mb-lg-0
-              img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-1.jpg', alt='')
-              h5 Margaret E.
-              p.font-weight-light.mb-0 "This is fantastic! Thanks so much guys!"
-          .col-lg-4
-            .testimonial-item.mx-auto.mb-5.mb-lg-0
-              img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-2.jpg', alt='')
-              h5 Fred S.
-              p.font-weight-light.mb-0
-                | "Bootstrap is amazing. I've been using it to create lots of super nice landing pages."
-          .col-lg-4
-            .testimonial-item.mx-auto.mb-5.mb-lg-0
-              img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-3.jpg', alt='')
-              h5 Sarah W.
-              p.font-weight-light.mb-0 "Thanks so much for making these free resources available to us!"
-    // Call to Action
-    section.call-to-action.text-white.text-center
-      .overlay
-      .container
-        .row
-          .col-xl-9.mx-auto
-            h2.mb-4 Ready to get started? Sign up now!
-          .col-md-10.col-lg-8.col-xl-7.mx-auto
-            form
-              .form-row
-                .col-12.col-md-9.mb-2.mb-md-0
-                  input.form-control.form-control-lg(type='email', placeholder='Enter your email...')
-                .col-12.col-md-3
-                  button.btn.btn-block.btn-lg.btn-primary(type='submit') Sign up!
+              | Inhalert is a Victorian air quality alert app, sending you notifications when the air quality in your local area
+              | drops below recommended levels
+        //.row.no-gutters
+        //  .col-lg-6.text-white.showcase-img(style="background-image: url('/img/bg-showcase-2.jpg');")
+        //  .col-lg-6.my-auto.showcase-text
+        //    h2 Updated For Bootstrap 4
+        //    p.lead.mb-0
+        //      | Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!
+        //.row.no-gutters
+        //  .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/bg-showcase-3.jpg');")
+        //  .col-lg-6.order-lg-1.my-auto.showcase-text
+        //    h2 Easy to Use & Customize
+        //    p.lead.mb-0
+        //      | Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!
+    //// Testimonials
+    //section.testimonials.text-center.bg-light
+    //  .container
+    //    h2.mb-5 What people are saying...
+    //    .row
+    //      .col-lg-4
+    //        .testimonial-item.mx-auto.mb-5.mb-lg-0
+    //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-1.jpg', alt='')
+    //          h5 Margaret E.
+    //          p.font-weight-light.mb-0 "This is fantastic! Thanks so much guys!"
+    //      .col-lg-4
+    //        .testimonial-item.mx-auto.mb-5.mb-lg-0
+    //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-2.jpg', alt='')
+    //          h5 Fred S.
+    //          p.font-weight-light.mb-0
+    //            | "Bootstrap is amazing. I've been using it to create lots of super nice landing pages."
+    //      .col-lg-4
+    //        .testimonial-item.mx-auto.mb-5.mb-lg-0
+    //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-3.jpg', alt='')
+    //          h5 Sarah W.
+    //          p.font-weight-light.mb-0 "Thanks so much for making these free resources available to us!"
+    //// Call to Action
+    //section.call-to-action.text-white.text-center
+    //  .overlay
+    //  .container
+    //    .row
+    //      .col-xl-9.mx-auto
+    //        h2.mb-4 Ready to get started? Sign up now!
+    //      .col-md-10.col-lg-8.col-xl-7.mx-auto
+    //        form
+    //          .form-row
+    //            .col-12.col-md-9.mb-2.mb-md-0
+    //              input.form-control.form-control-lg(type='email', placeholder='Enter your email...')
+    //            .col-12.col-md-3
+    //              button.btn.btn-block.btn-lg.btn-primary(type='submit') Sign up!
     // Footer
     footer.footer.bg-light
       .container
@@ -156,9 +152,9 @@ html(lang='en')
                 a(href='#')
                   i.fab.fa-instagram.fa-2x.fa-fw
     // Bootstrap core JavaScript
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
     script(src='/vendor/jquery/jquery.min.js')
     script(src='vendor/jquery-easing/jquery.easing.min.js')
-
     script(src='/vendor/bootstrap/js/bootstrap.bundle.min.js')
     script(src='js/grayscale.min.js')
 
