--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ html(lang='en')
   head
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
     script(type='text/javascript' src="/static/new_forecast.js")
+    script(type='text/javascript' src="/static/printPostcode.js")
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description', content='')
@@ -47,9 +48,9 @@ html(lang='en')
             form
               .form-row
                 .col-12.col-md-9.mb-2.mb-md-0
-                  input.form-control.form-control-lg(type='text', placeholder='Enter your postcode...')
+                  input#whatsup.form-control.form-control-lg(type='text', placeholder='Enter your postcode...')
                 .col-12.col-md-3
-                  button.btn.btn-block.btn-lg.btn-secondary(type='submit') Show me!
+                  button.btn.btn-block.btn-lg.btn-secondary(type='button', onclick='printPostcode()') Show me!
     // Icons Grid
     section.features-icons.bg-light.text-center
       script(type = 'text/javascript').
@@ -58,7 +59,7 @@ html(lang='en')
         h3 Live Air Quality Report for Victoria
         br
         table.table.table-bordered#summaryTable
-          thead.table-info
+          thead.table-warning
             tr
               th(scope='col') Region
               th(scope='col') Air Quality Status
