Finished summary table, show more button. Moving onto summary endpoint

--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -124,3 +124,9 @@ footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+
+.status_cell {
+  margin-top: 8px;
+  font-size: 95%;
+  padding: 7px 20px !important;
+}
